<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="20dp"
    android:paddingTop="22dp"
    android:paddingBottom="6dp">

    <LinearLayout
        android:id="@+id/btnBeMentor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/shape_arc_stamp_circle">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_mentor" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/font_plex_mono"
            android:gravity="center"
            android:text="@string/home_qa_mentor"
            android:textAllCaps="true"
            android:textColor="@color/ns_grey"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnOurShop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/shape_arc_stamp_circle">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_shop" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/font_plex_mono"
            android:gravity="center"
            android:text="@string/home_qa_shop"
            android:textAllCaps="true"
            android:textColor="@color/ns_grey"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRecMe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-3dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/shape_arc_stamp_circle">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_who" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/font_plex_mono"
            android:gravity="center"
            android:text="@string/home_qa_who"
            android:textAllCaps="true"
            android:textColor="@color/ns_grey"
            android:textSize="8sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnDonate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/shape_arc_stamp_circle">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_donate" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/font_plex_mono"
            android:gravity="center"
            android:text="@string/home_qa_donate"
            android:textAllCaps="true"
            android:textColor="@color/ns_grey"
            android:textSize="8sp" />
    </LinearLayout>
</LinearLayout>
